# awscloud_sso_cred_helper

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: aws.rs  lib.rs  main.rs
