[package]
name = "aws_sso"
version = "1.0.0"
edition = "2021"
authors = ["David Webster <dwebster182@gmail.com>"]
description = "A simple crate for working with AWS SSO operations."
license = "Apache-2.0"
repository = "https://github.com/davidwebstar34/aws_sso"
homepage = "https://github.com/davidwebstar34/aws_sso"
documentation = "https://docs.rs/aws_sso"
keywords = ["aws", "sso", "rust"]
categories = ["cloud-computing", "access-management"]

[dependencies]
tokio = { version = "1", features = ["full"] }
aws-config = "1.5.10"
aws-sdk-sso = "1.5.10"
aws-sdk-ssooidc = "1.5.10"
webbrowser = "0.5.5"
skim = "0.10.1"
dirs-next = "2.0"
configparser = "3.1.0"

[lib]
name = "aws_sso"
path = "src/lib.rs"