[package]
name = "awscloud_sso_cred_helper"
version = "1.8.0"
edition = "2021"
authors = ["David Webster <dwebster182@gmail.com>"]
description = "A helper library for AWS SSO credential workflows"
license = "MIT"
repository = "https://github.com/davidwebstar34/awscloud_sso_cred_helper"
homepage = "https://github.com/davidwebstar34/awscloud_sso_cred_helper"
documentation = "https://docs.rs/awscloud_sso_cred_helper"
keywords = ["aws", "sso", "rust"]

[dependencies]
tokio = { version = "1", features = ["full"] }
aws-config = "1.5.10"
aws-sdk-sso = "1.5.10"
aws-sdk-ssooidc = "1.5.10"
webbrowser = "0.8.3"
skim = { version = "0.15.7", default-features = false, features = ["cli"] }
dirs-next = "2.0"
configparser = "3.1.0"
clap =  { version = "3.2", features = ["derive"] }

[lib]
name = "awscloud_sso_cred_helper"
path = "src/lib.rs"